Can run test w/o special conf